# slidcord

./: .copier-answers.yml  .gitignore  Dockerfile  README.md  doap.xml  docker-compose.yml  pyproject.toml
.builds/: ci.yml  container.yml
docs/source/: conf.py  config.rst  features.rst  index.rst  user.rst
slidcord/: __init__.py  __main__.py  client.py  commands.py  config.py  contact.py  group.py  session.py  util.py
tests/: test_base.py
